<resources>
    <string name="app_name">Class Lecture</string>
    <string name="get_started">Get Started</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="new_group">New Group</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="whatsapp_web">WhatsApp Web</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="sell">Sell</string>
    <string name="my_ads">My Ads</string>
    <string name="my_account">My Account</string>
    <string name="edit">Edit</string>
    <string name="deactivate">Deactivate</string>
    <string name="delete">Delete</string>
    <string name="mark_as_sold">Mark as Sold</string>
    <string name="show_popup_menu">Show Popup Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_name">Ali Jawad</string>
    <string name="dummy_email">abc@gmail.com</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="open_alert_dialog">Open Alert Dialog</string>
    <string name="open_two_btns_alert_dialog">Open Two Buttons Alert Dialog</string>
    <string name="open_three_btns_alert_dialog">Open Three Buttons Alert Dialog</string>
    <string name="open_dialog_to_say_hello">Open Dialog to Say Hello!</string>
    <string name="first_name">First Name</string>
    <string name="say_hi">Say Hi!</string>
    <string name="show_bottom_sheet_dialog">Show Bottom Sheet Dialog Fragment</string>
    <string name="sample_msg">This is bottom sheet dialog fragment</string>
    <string name="submit">Submit</string>
    <string name="upload">Upload</string>
    <string name="browse_images">Browse Images</string>
    <string name="download">Download</string>
    <string name="start_counter">Start Counter</string>
    <string name="stop_counter">Stop Counter</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="add">Add</string>
    <string name="get_all">Get All</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>

    <string name="server_key">
        AAAAcDsE0Sg:APA91bFVkgyvzhv_PV_xiPJZab0uKR7VqZmebH1IqyUxTDkAiRKzPXmDySzd5YbCqBVFKBz-Bn-vyCVot-eq8hUd1ZM0bepM3ni_JvmFYFSlusuVvcbFi4AUbM88rdHDlvuV0Ag4-KxR
    </string>
    <string name="show_friends">Show All Friends</string>
    <string name="type_msg">Type Message here...</string>
    <string name="send_msg">Send Message</string>
</resources>