<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".ali.activity.NoteActivity">

    <EditText
        android:id="@+id/title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"/>

    <EditText
        android:id="@+id/detail_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detail"
        android:inputType="textMultiLine"
        android:maxLines="4"/>

    <Button
        android:id="@+id/add_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <Button
        android:id="@+id/get_all_notes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_all"/>

    <Button
        android:id="@+id/show_friends_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_friends"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>