<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".shaharyar.AuthActivity">

    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        tools:listitem="@layout/item_image"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <Button
        android:id="@+id/browse_images_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse_images"
        android:layout_gravity="end"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/upload_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_gravity="end"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/download_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download"
        android:layout_gravity="end"
        android:textAllCaps="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/downloaded_images_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        tools:listitem="@layout/item_image"
        app:spanCount="2"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>

</LinearLayout>