<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_16sdp"
    android:background="@color/colorPrimary"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:src="@drawable/itachi"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/app_name_tv"/>

    <TextView
        android:id="@+id/app_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginStart="@dimen/_10sdp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/logo_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo_iv"
        app:layout_constraintBottom_toBottomOf="@id/logo_iv"/>

    <TextView
        android:id="@+id/first_name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/logo_iv"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/first_name_label_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/say_hi_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/say_hi"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_selected"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/first_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>